bottom spacing issue fixed in simulations

--- a/src/components/commonCss/style.scss
+++ b/src/components/commonCss/style.scss
@@ -5984,7 +5984,7 @@ left: 17rem;
 }
 // <-------END Calculator css--------->
 .simulation-height {
-  min-height: calc(100vh - 440px) !important;
+  min-height: calc(100vh - 419px) !important;
 }
 .other-costing-simulation {
   min-height: calc(100vh - 337px);
